# csgrs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  SPATIAL_CSG_INTEGRATION_SUMMARY.md  debug_csg_issue.rs  debug_svo.rs  readme.md  sprint_78_final_report.xml  sprint_79_final_report.xml  tarpaulin-report.html  tatus --porcelain  temp_file  temp_tests.rs
.cargo/: config.toml
benches/: main.rs  voxel_critical_fixes.rs
coverage-report/: tarpaulin-report.html
docs/: ITERATOR_REFACTORING_PERFORMANCE.md  adr.md  audit_report_2025.md  backlog.md  checklist.md  csg_improvements_summary.md  csg_issues_analysis.md  extended-boolean-operations-proposal.md  mathematical_foundations.md  prd.md  sprint_plan_2025.md  srs.md  svo_bsp_technical_critique.md  user_guide.md  voxel_architectural_critique_and_fixes.md  week1_critical_fixes.md
examples/: 03-booleans.rs  README.md  adjacency_demo.rs  configurable_cylinder_fillet.rs  cube_sphere_difference.rs  cube_sphere_intersection.rs  cube_sphere_union.rs  cube_sphere_xor.rs  cube_with_hole.rs  cylinder_junction_algorithms.md  extended-boolean-operations.rs  fixed_cylinder_junction.rs  metaball_diagnostics.rs  multi_format_export.rs  quantitative-analysis.rs  showcase.rs  smooth_cylinder_junction.rs  spatial_csg_integration_demo.rs  spatial_showcase.rs  sphere_cube_difference.rs  ultimate_fix_junction.rs  unified_spatial_demo.rs  voxels_csg.rs  voxels_primitives.rs  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: csg_operations.rs  file_format_parsing.rs  fuzz_target_1.rs  mesh_transformations.rs  shape_creation.rs
src/: errors.rs  (+12 more)
(+270 files in other folders)
